[metadata]
name = twitchcancer
version = 0.5.0
summary = Suite of tools to monitor and analyze chat cancer in Twitch chatrooms.
author = Benjamin Maisonnas
author_email = ben@wainei.net
url = https://github.com/benzhaomin/twitchcancer
license = GPLv3
description-file = README.md

[flake8]
exclude =
    .venv/
max-line-length = 120